seafile-ton/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seafile
  labels:
    oracle.vault.pessoal: "true"
